cmake_minimum_required(VERSION 3.9)
project(gtf_example CXX)
set(CMAKE_CXX_STANDARD 11)
set(SRC_DIR src)
set(SOURCE_FILES ${SRC_DIR}/main.cpp)
set(BUILD_DIR build)
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} gtest pthread)
